Added FeedbackError panel, also now using the new authentication

--- a/src/main/webapp/assets/css/styles.less.css
+++ b/src/main/webapp/assets/css/styles.less.css
@@ -7,3 +7,9 @@ form.form-signin {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.feedbackError {
+	width: 500px;
+	margin-left: auto;
+	margin-right: auto;
+}
